[project]
name = "lambdamoo-db"
version = "0.1.10"
description = "Parser for LambdaMOO databases"
authors = [{name = "Katelyn Gigante", email = "clockwork.singularity@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=22.2.0",
    "cattrs>=22.2.0",
    "click>=8.1.3",
    "parse>=1.19.0",
    "pytest>=7.2.1",
]

[project.scripts]
moodb2flat = "lambdamoo_db.cli:moodb2flat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 160

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
